syntax = "proto3";
package penumbra.client.specific;

import "crypto.proto";
import "chain.proto";
import "stake.proto";

// Methods for accessing chain state that are "specific" in the sense that they
// request specific portions of the chain state that could reveal private
// client data.  For instance, requesting all asset denominations is oblivious,
// but requesting the asset denomination for a specific asset id is not, because
// it reveals that the client has an interest in that asset specifically.
service SpecificQuery {
  rpc TransactionByNote(crypto.NoteCommitment) returns (chain.NoteSource);
  rpc ValidatorStatus(ValidatorStatusRequest) returns (stake.ValidatorStatus);
  rpc NextValidatorRate(crypto.IdentityKey) returns (stake.RateData);

  // General-purpose key-value state query API, that can be used to query
  // arbitrary keys in the JMT storage.
  rpc KeyValue(KeyValueRequest) returns (KeyValueResponse);
}

message ValidatorStatusRequest {
  // The expected chain id (empty string if no expectation).
  string chain_id = 1;
  crypto.IdentityKey identity_key = 2;
}

message KeyValueRequest {
  // The expected chain id (empty string if no expectation).
  string chain_id = 1;
  bytes key_hash = 2;

  // TODO (avahowell) add a proof boolean that requests an auth proof
}

message KeyValueResponse {
  bytes value = 1;

  // TODO (avahowell) add a proof field that contains an ICS23 auth proof. 
}
